fix: wrong position of tooltip icon on scripts fieldset

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -2647,6 +2647,10 @@ span.eqSign:before {
     margin-top: 5px;
 }
 
+.scriptFieldset .repeater a.help {
+    right: -67px;
+}
+
 .script.repeater textarea {
     margin-bottom: 20px;
     width: 100%;
